--- a/public_html/index.html
+++ b/public_html/index.html
@@ -212,7 +212,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">
                                         公式キャラクターとしてディアたん♡を発表しました。<br>
-                                        同ＡＩキャラクターによる「おみくじ」「会話」のDiscordチャンネルを新設しました。
+                                        同キャラクターによる「おみくじ」「会話」のDiscordチャンネルを新設しました。
                                     </p>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018-6上旬</h4>
+                                    <h4>2018-6下旬</h4>
                                     <h4 class="subheading">
                                         ホワイトペーパー発表<br>
                                         公式webの発表
@@ -243,7 +243,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018-6下旬</h4>
+                                    <h4>2018-7中旬</h4>
                                     <h4 class="subheading">資金調達の実行</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -276,7 +276,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018-7下旬</h4>
+                                    <h4>2018-8下旬</h4>
                                     <h4 class="subheading">取引所ロゴ公式発表。</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -293,7 +293,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2018-8上旬</h4>
+                                    <h4>2018-9上旬</h4>
                                     <h4 class="subheading">イーサリアムトークンへ</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -368,9 +368,9 @@
                             <div class="timeline-image">
                                 <img class="rounded-circle img-fluid" src="img/holding/99.png" alt="">
                                 <!--h4>
-                <br>NEXT
-                <br>
-            </h4-->
+                                    <br>NEXT
+                                    <br>
+                                </h4-->
                             </div>
                         </li>
                     </ul>
@@ -456,27 +456,75 @@
             </div>
             <!-- 12を対象のcol-sm-(数値)で割った値で分割する -->
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <div class="team-member">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4>BDA / COIN</h4>
-                        <p class="text-muted">リーダー / 運営 / 開発</p>
+                        <p class="text-muted">リーダー / 運営</p>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <div class="team-member">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4>K. A.</h4>
-                        <p class="text-muted">Webクリエイター / BOT / 開発</p>
+                        <h4>こみやんま</h4>
+                        <p class="text-muted">開発 / Web / BOT</p>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4>lovealco2</h4>
+                        <p class="text-muted">企画戦略</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
+                        <h4>T T</h4>
+                        <p class="text-muted">アドバイザー / 開発サポート</p>
+                        <!-- ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fa fa-twitter"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fa fa-facebook"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+            </ul-->
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4>ルパン4世</h4>
+                        <p class="text-muted">モデレーター</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
                     <div class="team-member">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -486,27 +534,7 @@
                         <p class="text-muted">広報 / イベント / 集客</p>
                     </div>
                 </div>
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4>Ykyky</h4>
-                        <p class="text-muted">営業 / 集客</p>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4>矢澤にこ</h4>
-                        <p class="text-muted">広報 / イベント</p>
-                    </div>
-                </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <div class="team-member">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -516,32 +544,24 @@
                         <p class="text-muted">アドバイザー / 開発サポート</p>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <div class="team-member">
                         <span class="fa-stack fa-4x">
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
                         </span>
-                        <!-- img class="mx-auto rounded-circle" src="img/team/01.png" alt="" -->
-                        <h4>T T</h4>
-                        <p class="text-muted">ブロックチェーンアドバイザー / サポーター</p>
-                        <!-- ul class="list-inline social-buttons">
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-twitter"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-facebook"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a href="#">
-                              <i class="fa fa-linkedin"></i>
-                            </a>
-                          </li>
-                        </ul-->
+                        <h4>矢澤にこ</h4>
+                        <p class="text-muted">広報 / イベント</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <span class="fa-stack fa-4x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-diamond fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4>Ykyky</h4>
+                        <p class="text-muted">営業 / 集客</p>
                     </div>
                 </div>
             </div>
