背景などの更新

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -92,7 +92,7 @@ $localize_hash = GetLocalizeHash();
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <!-- Custom styles for this template -->
-    <link href="css/agency.css??v=201809100027" rel="stylesheet">
+    <link href="css/agency.css??v=201809092350" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./font-awesome/css/font-awesome-plugin.css?v=201807250004">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
 </head>
@@ -379,9 +379,9 @@ $localize_hash = GetLocalizeHash();
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">SPEC</h2>
-                    <!--h3 class="section-subheading text-muted" style="font-size:1.3em">
+                    <h3 class="section-subheading text-muted" style="font-size:1.3em">
                     <?php echo($localize_hash["SPEC_DETAIL_01"][$language]); ?>
-                    </h3-->
+                    </h3>
                 </div>
                 <div class="col-sm-6" style="text-align:center">
                     <canvas id="CoinPortFolioGraph" style="height: 60vmin; width: 60vmin;"></canvas>
@@ -444,7 +444,7 @@ $localize_hash = GetLocalizeHash();
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <h4 class="service-heading"></h4>
-                    <p class="block-left-txt">
+                    <p class="text-muted" style="text-align:left">
                         <span style="font-size:1.3em; color:#000000"><i class="fa fa-ether"></i> <?php echo($localize_hash["SPEC_ETHER_TOKEN_TITLE"][$language]); ?></span> <span style="font-size:1.0em;color:#000000">(ERC223)</span><span style="font-size:1.3em;"><br></span>
                         <?php echo($localize_hash["SPEC_ETHER_TOKEN_DETAIL_01"][$language]); ?>
                         <label style='width:65px'>Contract</label>：<br class="hidden-sm-up"><span class="contract">0xF6CaA4bebD8Fab8489bC4708344d9634315c4340</span><br>
